--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <style>
-    body { font-family: sans-serif; padding: 10px; }
-    h4 { margin: 0 0 5px; color: red; }
+    body { font-family: sans-serif; padding: 10px; width: 300px; }
+    
   </style>
 </head>
 <body>
